# haskell-gaussian-elimination

./: CHANGELOG.md  README.md  gauss.cabal
app/: Main.hs
src/: Gauss.hs  Input.hs  Output.hs  Terminal.hs  Utils.hs
