cabal-version:      3.0
name:               gauss
version:            0.1.0.0
synopsis:           A simple gaussian elimination implementation
-- description:
homepage:           https://github.com/spasimir21/haskell-gaussian-elimination
license:            MIT
license-file:       LICENSE
author:             Spasimir Pavlov
maintainer:         spasimir.pavlov@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable gauss
    import:           warnings
    main-is:          Main.hs
    other-modules: Gauss Input Output Terminal Utils
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        ansi-terminal >= 1.0.2
    hs-source-dirs:   app, src
    default-language: GHC2021
